# AODAnalysisTool

./: README.md  compile.sh  package_filters.txt  setup.sh
run/: CalcEffAlg_options.py  CalcEffAlg_optionsGrid.py  CalcEffAlg_optionsMT.py  checkFile.cxx  clear.sh  root_to_pdf.cxx  run.sh  sub_pathena.sh
run/legacy_lists/: Data_default_AOD.list  Data_noRpcHit_AOD.list  FTK_361107_def213_n5_500eve.list  FTK_361107_new.list  FTK_361107_road.list  FTK_361107_road_def.list  FTK_4.list  FTK_424100_100_.list  FTK_424100_200.list  FTK_424100_n5_500eve.list  (+161 more)
run_bsub/: CalcEffAlg_optionsMT.py  bsub.sh  data18_13TeV.periodAllYear_HEAD_Unknown_PHYS_StandardGRL_All_Good.xml  data18_13TeV.periodAllYear_HEAD_Unknown_PHYS_StandardGRL_All_Good_25ns.xml
source/CalcEfficiency/: CMakeLists.txt
source/CalcEfficiency/CalcEfficiency/: CBObjects.h  CalcEffAlg.h  EFObjects.h  EventTreeMT.h  HistNtupleMT.h  L1Objects.h  MuonExtUtils.h  NtupleMakerTool.h  NtupleManager.h  OfflineObjects.h  ParticleSelecterTool.h  Requirements.h  SAObjects.h  TDTObjects.h  TagAndProbe.h  TagAndProbeMT.h  TrigMatchingTool.h  TrigMatchingToolMT.h  Utils.h  easy_logger.h
source/CalcEfficiency/run/: CalcEffAlg_options.py
source/CalcEfficiency/share/: CalcEffAlg_options.py
source/CalcEfficiency/src/: CalcEffAlg.cxx  EventTreeMT.cxx  HistNtupleMT.cxx  MuonExtUtils.cxx  NtupleMakerTool.cxx  NtupleManager.cxx  ParticleSelecterTool.cxx  TagAndProbe.cxx  TagAndProbeMT.cxx  TrigMatchingTool.cxx  TrigMatchingToolMT.cxx
source/CalcEfficiency/src/components/: CalcEfficiency_entries.cxx  CalcEfficiency_load.cxx
(+10 files in other folders)
